refactor: add more validations and renaming
