# openapi3.yaml
@@ -119,10 +119,12 @@ paths:
                   ./Schema/ingestionTrigger/responses/ingestionTriggerResponses.yaml#/components/schemas/errorMessage
   /ingestion/{jobId}/retry:
     put:
-      operationId: retryLayer
+      operationId: retryIngestion
       tags:
         - ingestion
-      summary: retry a failed ingestion job caused by validation errors
+      summary: retry a failed or completed ingestion job with task failures
+      description: >-
+        Retries an ingestion job that has failed or completed with errors.  This endpoint handles failures from any task in the ingestion workflow. The job must be in FAILED or COMPLETED status.
       parameters:
         - name: jobId
           in: path
@@ -139,14 +141,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/SuccessfulIngestionResponse'
         '400':
-          description: Bad request - Job status is not FAILED or COMPLETED, or no errors in validation task, or shapefile has not changed
+          description: Bad request - Job status is not FAILED, SUSPENDED or COMPLETED, or required parameters are missing
           content:
             application/json:
               schema:
                 $ref: >-
                   ./Schema/ingestionTrigger/responses/ingestionTriggerResponses.yaml#/components/schemas/errorMessage
         '404':
-          description: Not Found - Job or validation task not found
+          description: Not Found - Job tasks not found
           content:
             application/json:
               schema:
@@ -160,7 +162,7 @@ paths:
                 $ref: >-
                   ./Schema/ingestionTrigger/responses/ingestionTriggerResponses.yaml#/components/schemas/errorMessage
         '500':
-          description: Server error
+          description: Internal Server error
           content:
             application/json:
               schema:
@@ -332,7 +334,7 @@ components:
     IngestionResolution:
       type: number
       format: double
-      minimum: 1.67638063430786e-7
+      minimum: 0.000000167638063430786
       maximum: 0.703125
       description: requested ingestion resolution
     IngestionUpdateLayerMetadata:
