# src/ingestion/controllers/ingestionController.ts
@@ -10,7 +10,7 @@ import type { IRetryRequestParams, IRecordRequestParams, ResponseId } from '../i
 import { IngestionManager } from '../models/ingestionManager';
 
 type NewLayerHandler = RequestHandler<undefined, ResponseId, unknown>;
-type RetryLayerHandler = RequestHandler<IRetryRequestParams, ResponseId, unknown>;
+type RetryIngestionHandler = RequestHandler<IRetryRequestParams, ResponseId, unknown>;
 type UpdateLayerHandler = RequestHandler<IRecordRequestParams, ResponseId, unknown>;
 
 @injectable()
@@ -63,9 +63,9 @@ export class IngestionController {
     }
   };
 
-  public retryLayer: RetryLayerHandler = async (req, res, next) => {
+  public retryIngestion: RetryIngestionHandler = async (req, res, next) => {
     try {
-      const response = await this.ingestionManager.retryLayer(req.params.jobId);
+      const response = await this.ingestionManager.retryIngestion(req.params.jobId);
 
       res.status(StatusCodes.OK).send(response);
     } catch (error) {
